# stereo-vision

./: LICENSE  README.md
camera/bb2_sgm/: CMakeLists.txt  SGMStereo.cc  SPSStereo.cc  SPSStereo.h  camera_capture_base.h  camera_capture_libdc1394.cc  camera_capture_libdc1394.h  camera_capture_main.cc  libdc_helper.h
camera/bb2_sgm/spsstereo/: CMakeLists.txt
config_files/: bb_step3_lst.xml  camera_params_bb_lcd.txt  camera_params_kitti_04.txt  config_artificial_00.txt  config_bb.txt  config_igor.txt  config_kitti_00.txt  config_kitti_01.txt  config_kitti_02.txt  config_kitti_03.txt  config_kitti_04.txt  config_kitti_05.txt  config_kitti_06.txt  config_kitti_07.txt  config_kitti_08.txt  config_kitti_09.txt  config_kitti_10.txt  config_kitti_11.txt  config_kitti_12.txt  config_kitti_13.txt  config_kitti_14.txt  config_kitti_15.txt  config_kitti_16.txt  config_kitti_17.txt  config_kitti_18.txt  config_kitti_19.txt  config_kitti_20.txt  config_kitti_21.txt  config_tractor.txt  config_tsukuba_fluorescent.txt  kitti_01_lst.xml  kitti_02_lst.xml  kitti_03_lst.xml  kitti_05_lst.xml  kitti_08_lst.xml  kitti_11_lst.xml  kitti_12_lst.xml  kitti_15_lst.xml  kitti_18_lst.xml  kitti_21_lst.xml  (+11 more)
core/: CMakeLists.txt  (+10 more)
deformation_field/optimization/calibration_bias/: CMakeLists.txt  deformation_field_solver.cc  deformation_field_solver.h
optimization/bundle_adjustment/: CMakeLists.txt  bundle_adjuster.cc  bundle_adjuster.h  bundle_adjuster_base.h  bundle_adjustment_solver.cc  bundle_adjustment_solver.h  ceres_helper.h
optimization/bundle_adjustment/old_without_quaternions/: bal_problem_stereo.cc  bal_problem_stereo.h  bundle_adjuster_2frame.cc  bundle_adjuster_2frame.h  bundle_adjuster_mfi.cc  bundle_adjuster_mfi.h  bundle_adjuster_multiframe.cc  bundle_adjuster_multiframe.cc.old  bundle_adjuster_multiframe.h  bundle_adjuster_multiframe.h.old  bundle_adjustment_solver.cc.old  bundle_adjustment_solver.cc.testing  bundle_adjustment_solver.h.old  bundle_adjustment_solver.h.testing  sba_base.h  sba_ceres.cc  sba_ceres.h
optimization/calibration_from_motion/: CMakeLists.txt  cfm_solver.cc  cfm_solver.h
optimization/main/ceres_sba/: CMakeLists.txt  ceres_test.cc
optimization/test/sba/: CMakeLists.txt  sba_test.cc
optimization/test/sba/ros/: CMakeLists_ros.txt  sba_test_ros_1.cc  sba_test_ros_2.cc
reconstruction/base/new_sgm/: CMakeLists.txt  sgm_stereo.cc  sgm_stereo.cc.old  sgm_stereo.h  sgm_stereo.h.old  sgm_stereo_main.cc
reconstruction/main/convert_img_to_pcd/: CMakeLists.txt  main.cc
reconstruction/main/create_rgbd_dataset/: CMakeLists.txt  main.cc
reconstruction/main/dense_stereo_libelas/: CMakeLists.txt  elas.cpp  main.cc
reconstruction/main/sgm_cnn/: CMakeLists.txt  main.cc
reconstruction/main/sgm_fine_tune/: CMakeLists.txt  main.cc
reconstruction/main/sgm_single/: CMakeLists.txt  main.cc
reconstruction/main/stereo_eval/: CMakeLists.txt  main.cc
reconstruction/main/vw_sgm/: CMakeLists.txt  TestSemiGlobalMatching.cpp.ign  main.cc  semi_global_matching.cc  semi_global_matching.h
reconstruction/pcl/: CMakeLists.txt  dem.cc  dem.h  dem_voting.cc  dem_voting.h  draw_helper.cc  draw_helper.h  math_helper.cc  math_helper.h
stereo_calib/recrifier_old/: CMakeLists.txt  rectifier.cc
stereo_egomotion/main/egomotion_simple/: CMakeLists.txt  egomotion_simple.cc
stereo_egomotion/main/egomotion_spearmint/: CMakeLists.txt  egomotion_spearmint.cc
stereo_egomotion/main/learn_deformation_field_with_tracking/: CMakeLists.txt  learn_deformation_field_main.cc
stereo_egomotion/main/vo_batch/: CMakeLists.txt  vo_main.cc
stereo_egomotion/main/vo_batch_debug_phi/: CMakeLists.txt  vo_main.cc
tracker/base/: CMakeLists.txt  CMakeLists.txt.orig  draw_helper.cc.ign  eval_helper.cc  eval_helper.h  helper_opencv.cc  helper_opencv.h  tracker_helper.cc  tracker_helper.h  types.h
tracker/detector/: CMakeLists.txt  feature_detector_agast.cc  feature_detector_agast.h  feature_detector_base.h  feature_detector_brisk.cc.ign  feature_detector_brisk.h  feature_detector_gfft.cc.ign  feature_detector_gftt.h  feature_detector_gftt_cv.cc.ign  feature_detector_gftt_cv.h  feature_detector_harris_cv.cc  feature_detector_harris_cv.h  feature_detector_harris_freak.cc.ign  feature_detector_harris_freak.h  feature_detector_uniform.cc  feature_detector_uniform.h
tracker/main/agast_freak_tracker/: CMakeLists.txt  main.cc
tracker/main/cpu_tracker/: CMakeLists.txt  main.cc
tracker/main/eval_refiner/: CMakeLists.txt  eval_refiner.cc
tracker/mono/: CMakeLists.txt  config_parser.cc  config_parser.h  tracker_base.h  tracker_bfm.cc  tracker_bfm.h  tracker_bfm_1_to_n.cc.ignore  tracker_bfm_1_to_n.h.ignore  tracker_bfm_cv.cc  tracker_bfm_cv.h  tracker_birch.cc.ignore  tracker_birch.h  tracker_opencv.cc.ignore  tracker_opencv.h.ignore  tracker_stm.cc  tracker_stm.h
tracker/mono/birch/: base.h  convolveFloatSSE.h  convolveFloatSSE_w32.c  convolve_unix.c  convolve_w32.c  error.c  error.h  klt.c  klt.h  klt_util.c  klt_util.h  pyramid.c  selectGoodFeatures.c  trackFeatures.c
tracker/mono/legacy/: tracker_bfm_ncc.cc.ign  tracker_bfm_ncc.h.ign
tracker/stereo/: CMakeLists.txt  debug_helper.cc  debug_helper.h  experiment_factory.h  experiment_factory_no_ba.h  stereo_tracker.cc  stereo_tracker.cc.map  stereo_tracker.cc.old  stereo_tracker.h  stereo_tracker.h.map  stereo_tracker.h.old  stereo_tracker_artificial.cc  stereo_tracker_artificial.h  stereo_tracker_base.h  stereo_tracker_bfm.cc  stereo_tracker_bfm.h  stereo_tracker_freak.cc  stereo_tracker_freak.cc.ocl  stereo_tracker_freak.h  stereo_tracker_freak.h_ocl  stereo_tracker_helper.cc  stereo_tracker_helper.h  stereo_tracker_libviso.cc.ignore  stereo_tracker_libviso.h  stereo_tracker_orb.cc  stereo_tracker_orb.cc.faster  stereo_tracker_orb.cc.knn_bugged  stereo_tracker_orb.cc.slow  stereo_tracker_orb.h  stereo_tracker_orb.h.faster  stereo_tracker_orb.h.knn_bugged  stereo_tracker_orb.h.slow  stereo_tracker_refiner.cc  stereo_tracker_refiner.h  stereo_tracker_sim.cc  stereo_tracker_sim.h  tracker_refiner_libviso.cc.ignore  tracker_refiner_libviso.h
(+572 files in other folders)
